# gcal-meta

./: pyproject.toml
gcal_meta/: __init__.py
tests/: test_gcal_meta.py
